Untesting, also took the colon out of the done beers header

--- a/simple.html
+++ b/simple.html
@@ -19,7 +19,7 @@
 
             if(doneBeers.length > 0) {
                 document.getElementById("main-result").innerHTML = "Yes!"
-                document.getElementById("beers-header").innerHTML = "Looks like these beers are done:"
+                document.getElementById("beers-header").innerHTML = "Looks like these beers are done"
 
                 beersElement = document.getElementById("beers")
 
